# pipecat-mistral-tts-demo

./: .env.example  .gitignore  README.md  demo_bot.py  diagnostics.py  mistral_tts.py  pyproject.toml
